--- a/default.conf
+++ b/default.conf
@@ -1,19 +1,23 @@
 server {
   listen 80;
-  server_name some_name;
-  
+  server_name example.loc;
+
   location /.well-known/acme-challenge/ {
     root /var/www/certbot;
   }
   location / {
         return 301 https://$host$request_uri;
-  }      
+  }
 }
 server {
     listen 443 ssl;
-    server_name some_name;
+    server_name example.loc;
+
     ssl_certificate /usr/share/nginx/certificates/fullchain.pem;
     ssl_certificate_key /usr/share/nginx/certificates/privkey.pem;
     include /etc/ssl-options/options-nginx-ssl.conf;
     ssl_dhparam /etc/ssl-options/ssl-dhparams.pem;
+
+    root /usr/share/nginx/html;
+    index index.html;
 }
